# web3

./: .gitignore
1-basics/blocks/: Cargo.toml
1-basics/blocks/src/: main.rs
1-basics/node_hashing/: index.js  package-lock.json  package.json
account/: Cargo.toml
account/src/: main.rs  model.rs
accounts-1/: Cargo.toml
accounts/src/: main.rs
calculator/: Anchor.toml
calculator/programs/calculator/src/: lib.rs
calculator/tests/: calculator.ts
day-1/: Anchor.toml
day-1/programs/day-1/: Cargo.toml
day-1/programs/day-1/src/: lib.rs
day-1/tests/: day-1.ts
day2/: Anchor.toml
day2/programs/day2/src/: lib.rs
day2/tests/: day2.ts
dust_sweeper/: Cargo.toml
dust_sweeper/src/: main.rs
liquidity_sniper/: Cargo.toml
liquidity_sniper/src/: main.rs
sol_/: index.js  package-lock.json  package.json
sol_rust/: Cargo.toml  README.md
sol_rust/src/: account.rs  main.rs
vault_reader/: Cargo.toml  README.md
vault_reader/src/: main.rs
