[package]
name = "sol_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "3.1.1"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
tokio = {version = "1.48.0", features = ["full"]}
